# CppSlam

./: .clang-tidy  CMakeLists.txt  Dockerfile  Makefile  readme.md
src/: CMakeLists.txt  dummy.cpp  hello.cpp  hello.h  identifier.h  track_manager.h  trackable.h
test/: CMakeLists.txt  hello_test.cpp  track_manager_test.cpp
